--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "concurrently": "^6.2.0",
     "electron": "^13.1.6",
     "typescript": "^4.3.5"
